refactor(benchmark): consolidate table rendering into a shared row builder
printTable/renderMarkdown/renderText each built the same 8 cell values with
near-identical logic. Extract RowCells/buildRow so a future backend column
or n/a case only needs to be handled once.